--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -10,7 +10,7 @@
       {% else %}
       <title>Moringa Tribune</title>
       {% endif %} {% block styles %} {% bootstrap_css %}
-      <link rel="stylesheet" href="" />
+      <link rel="stylesheet" href="{% static 'css/basegram.css' %}" />
       {% endblock %}
     </head>
     <body>
