--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -7,7 +7,7 @@
   <div class="logo">Gang Gang</div>
   <div class="nav-items">
     <li><a href="/">Base</a>Base</li>
-    <li><a href="/home/"></a>Home</li>
+    <li><a href="/home/">Home</a></li>
     <li><a href="/profile/">User_profile</a></li>
     <li><a href="/viewphoto/">viewphoto</a></li>
     <li><a href="/sign_up/">Sign UP</a></li>
