--- a/gram/templates/login.html
+++ b/gram/templates/login.html
@@ -1,48 +1,72 @@
+{% load bootstrap3 %} {% load static%}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Instagram Log in form design</title>
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="{% static 'css/instagram-nav.css' %}" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="icon" href="assets/images/favicon.ico" />
   </head>
-
   <body>
-    <div class="container">
-      <div class="text">Log in to Continue</div>
-      <div class="page">
-        <div class="title">instagram</div>
-        <form>
-          <input type="text" placeholder="Phone number, username, or email" />
-          <input type="password" placeholder="Password" />
-          <button>Log in</button>
-          <div class="option">OR</div>
-        </form>
-        <div class="fblink">
-          <span class="fab fa-facebook"></span>
-          <a href="#">Log in with Facebook</a>
+    <main>
+      <div class="log-in-container">
+        <div class="log-in">
+          <!-- Logo -->
+          <img src="assets/images/instagram-logo.png" class="logo" />
+          <!-- Log in form -->
+          <div class="log-in-form">
+            <input type="text" placeholder="Phone number, username or email" />
+            <input type="password" placeholder="Password" />
+            <button class="log-in-button">Log In</button>
+          </div>
+          <!-- OR divider -->
+          <span class="or-divider">OR</span>
+          <!-- Log in with Facebook -->
+          <div class="fb-login">
+            <a href="#">
+              <img src="assets/images/facebook-icon.png" />
+              <span>Log in with Facebook</span>
+            </a>
+          </div>
+          <!-- Forgot password? -->
+          <a href="#">Forgot password?</a>
         </div>
-
-        <div class="forget-id">
-          <a href="#">Forget password?</a>
+        <!-- Sign up -->
+        <div class="sign-up">
+          <span>Don't have an account?</span><a href="#">Sign up</a>
         </div>
-
-        <div class="signup">
-          <p>Don't have an account?<a href="#">Sign up</a></p>
+        <!-- Download app -->
+        <div class="get-the-app">
+          <span>Get the app</span>
+          <div class="app-images">
+            <a href="#"><img src="assets/images/applestore.png" /></a>
+            <a href="#"><img src="assets/images/googlestore.png" /></a>
+          </div>
         </div>
       </div>
-    </div>
-
-    <!--This is my youtube channel link-->
-    <a href="https://youtu.be/otceIEzFlEg" id="yt" target="_blank"
-      ><i style="margin-right: 5px" class="fab fa-youtube"></i>Tutorial</a
-    >
+      <!-- Phones -->
+      <div class="phones-container">
+        <img src="assets/images/phones.png" />
+      </div>
+    </main>
+    <footer>
+      <ul class="footer-links">
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">HELP</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li><a href="#">LOCATIONS</a></li>
+        <li><a href="#">TOP</a></li>
+        <li><a href="#">ACCOUNTS</a></li>
+        <li><a href="#">HASHTAGS</a></li>
+        <li><a href="#">LANGUAGE</a></li>
+      </ul>
+      <span class="copyright">&copy; 2020 INSTAGRAM FROM FACEBOOK</span>
+    </footer>
   </body>
 </html>
