--- a/gram/templates/login.html
+++ b/gram/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/login-details.css' %}" />
     <link rel="icon" href="assets/images/favicon.ico" />
   </head>
   <body>
