--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -1,1 +1,23 @@
-<h6>profile</h6>
+{% load bootstrap3 %} {% load static%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% block styles %} {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+    {% endblock %}
+
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="profile">
+          <h2>Monkey</h2>
+        </div>
+      </div>
+    </header>
+  </body>
+</html>
