Profile html Bio and Followers Page Created

--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -15,7 +15,35 @@
     <header>
       <div class="container">
         <div class="profile">
-          <h2>Monkey</h2>
+          <div class="profile-page">
+            <img src="{% static '/images/Akan.png' %}" alt="User Image" />
+          </div>
+          <div class="profile-user-settings">
+            <h1 class="profile-user-name">Mellanex</h1>
+            <button class="btn profile-edit-btn">Edit Profile</button>
+            <button
+              class="btn profile-settings-btn"
+              aria-label="Profile Settings"
+            >
+              <i class="fas fa-cog" aria-hidden></i>
+            </button>
+          </div>
+
+
+          <div class="profile-stats">
+            <ul>
+              <li><span class="profile-stat-count"></span>Posts</li>
+              <li><span class="profile-stat-count"></span>Followers</li>
+              <li><span class="profile-stat-count"></span>Following</li>
+            </ul>
+          </div>
+
+
+          <div class="profile-bio">
+            <p><span class="profile-real-name">Mellanex</span>Hello Whats Up</p>
+
+          </div>
+
         </div>
       </div>
     </header>
