Images Gallery Created

--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -41,11 +41,82 @@
 
           <div class="profile-bio">
             <p><span class="profile-real-name">Mellanex</span>Hello Whats Up</p>
-
           </div>
-
+<!-- Profile Section --> 
         </div>
       </div>
+<!-- End of Container-->      
     </header>
+    <main>
+      <div class="gallery">
+
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static '/images/FITNESS API (1).png' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static '/images/FITNESS API (1).png' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static '/images/Akan.png' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static 'images/pexels-pixabay-355952.jpg' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static 'images/Untitled design (1).png' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="gallery-item" tabindex="0">
+          <img src="{% static 'images/Untitled design.png' %}" alt="Gallery-1" class="gallery-image">
+          <div class="gallery-item-info">
+            <ul>
+              <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
+              <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden>2</i></li>
+            </ul>
+          </div>
+        </div>
+
+
+      </div>
+    </main>
   </body>
 </html>
