Profile Images Class html Created

--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -85,6 +85,12 @@
 
         <div class="gallery-item" tabindex="0">
           <img src="{% static 'images/pexels-pixabay-355952.jpg' %}" alt="Gallery-1" class="gallery-image">
+
+          <div class="gallery-item-type">
+            <span class="visually-hidden">Gallery</span>
+            <i class="fas fa-clone" aria-hidden></i>
+          </div>
+
           <div class="gallery-item-info">
             <ul>
               <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
@@ -96,6 +102,12 @@
 
         <div class="gallery-item" tabindex="0">
           <img src="{% static 'images/Untitled design (1).png' %}" alt="Gallery-1" class="gallery-image">
+
+          <div class="gallery-item-type">
+            <span class="visually-hidden">video</span>
+            <i class="fas fa-video" aria-hidden></i>
+          </div>
+
           <div class="gallery-item-info">
             <ul>
               <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
@@ -117,6 +129,9 @@
 
 
       </div>
+
+ <!-- End of Gallery-->   
+      <div class="loader"></div>
     </main>
   </body>
 </html>
