--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,3 +1,48 @@
-h3 {
-  color: orange;
+:root{
+  font-size: 10px;
+}
+
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
+body{
+  font-family:"Open Sans", Arial , sans-serif;
+  min-height:100vh;
+  background-color: #fafafa;
+  color: #262626;
+  padding-bottom: 3rem;
+}
+
+*img{
+  display: block;
+}
+
+.container {
+  max-width: 93.5rem;
+  margin: 0 auto;
+  padding: 0 2rem ;
+}
+
+.btn{
+  all: unset;
+  background: none;
+  color: none;
+  display: inline-block;
+  cursor: pointer;
+  border: none;
+}
+
+.btn:focus{
+  outline: 0.5rem auto #4d90fe;
+}
+
+.visually-hidden{
+  position: absolute !important;
+  height: 1px;
+  widows: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px);
 }
