Various styles on the Profile.css

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -46,3 +46,37 @@ body{
   overflow: hidden;
   clip: rect(1px, 1px, 1px);
 }
+
+/* Profile Section*/
+.profile{
+  padding: 5rem 0;
+}
+
+.profile::after{
+  content:"";
+  display:block;
+  clear:both;
+}
+
+.profile-image{
+  float:left;
+  width: calc(33.333% - 1rem);
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  margin-right: 3rem;
+}
+.profile-image img{
+border-radius: 50%;
+}
+
+.profile-user-settings,
+.profile-stats,
+.profile-bio {
+  float: left;
+  width: calc(66.666% -2rem);
+}
+.profile-user-settings{
+  margin-top: 1.1rem;
+}
+
