--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -76,7 +76,154 @@ border-radius: 50%;
   float: left;
   width: calc(66.666% -2rem);
 }
+
 .profile-user-settings{
   margin-top: 1.1rem;
 }
 
+.profile-user-name{
+  display: inline-block;
+  font-size: 3.2rem;
+  font-weight:300;
+}
+
+.profile-edit-btn{
+  font-size: 1.4rem;
+  line-height:1.8;
+  border: 0.1rem solid #dbdbdb;
+  border-radius: 0.3rem;
+  padding:0 2.4rem;
+  margin-left: 2rem;
+}
+
+.profile-settings-btn{
+  font-size:2rem;
+  margin-left: 1rem;
+}
+
+.profile-stats{
+  margin-top:2.3rem;
+}
+.profile-stats li {
+  display: inline-block;
+  font-size:1.6rem;
+  line-height:1.5;
+  margin-right: 4rem;
+  cursor: pointer;
+}
+
+.profile-stats li:last-of-type{
+  margin-right: 0;
+}
+
+.profile-bio{
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-top: 2.3rem;
+}
+
+.profile-real-name,
+.profile-stat-count,
+.profile-esit-btn{
+  font-weight: 600;
+}
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  margin:-1rem -1rem;
+  padding-bottom: 3rem;
+}
+
+.gallery-item{
+  position:relative;
+  flex: 1 0 22rem;
+  margin: 1rem;
+  color:#fff;
+  cursor: pointer;
+}
+
+.gallery-item:hover .gallery-item-info,
+.gallery-item:focus .gallery-item-info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position:absolute;
+  top:0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0,0,.3);
+}
+
+.gallery-item-info{
+  display: none;
+}
+
+.gallery-item-info li{
+  display: inline-block;
+  font-size: 1.7rem;
+  font-weight:600;
+}
+.gallery-item-likes {
+  margin-right:2.2rem;
+}
+
+.gallery-item-type{
+  position:absolute;
+  top:1rem;
+  right:1rem;
+  font-size: 2.5rem;
+  text-shadow: 0.2rem , 0.2rem rgba(0, 0,0,0.1);
+}
+
+.fa-clone,
+.fa-comment{
+  transform: rotateY(180deg);
+}
+.gallery-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.loader{
+  width: 5rem;
+  height: 5rem;
+  border: 0.6rem solid #999;
+  border-bottom-color: transparent;
+  border-radius:50%;
+  margin:0 auto;
+  animation:loader 500ms linear infinite;
+}
+
+/*  */
+
+
+
+/*  */
+
+@supports (display: grid){
+  .profile{
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(3,auto);
+    grid-column-gap:3rem;
+    align-items: center;
+  }
+  
+  .profile-image{
+    grid-row: 1 / -1;
+  }
+
+  .profile-image,
+  .profile-user-settings,
+  .profile-stats,
+  .profile-bio,
+  .profile-item,
+  .gallery{
+    width: auto;
+    margin:0;
+  }
+
+}
