--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -4,7 +4,7 @@
 
 *,
 *::before,
-*::after{
+*::after {
   box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ body{
   padding-bottom: 3rem;
 }
 
-*img{
+img{
   display: block;
 }
 
@@ -74,7 +74,7 @@ border-radius: 50%;
 .profile-stats,
 .profile-bio {
   float: left;
-  width: calc(66.666% -2rem);
+  width: calc(66.666% - 2rem);
 }
 
 .profile-user-settings{
@@ -187,6 +187,8 @@ border-radius: 50%;
   object-fit: cover;
 }
 
+/*  */
+
 .loader{
   width: 5rem;
   height: 5rem;
@@ -198,8 +200,90 @@ border-radius: 50%;
 }
 
 /*  */
+@media screen and (max-width:40rem){
+  .profile{
+    display:flex;
+    flex-wrap: wrap;
+    padding:4rem 0;
+  }
+
+  .profile::after{
+    display: none;
+  }
+
+  .profile-image,
+  .profile-user-settings,
+  .profile-bio,
+  .profile-stats{
+    float:none;
+    width:auto;
+  }
+
+  .profile-image img{
+    width:7.7rem;
+  }
+
+  .profile-user-settings{
+    flex-basis: calc(100% - 10.7rem);
+    display:flex;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+  }
+
+  .profile-user-name{
+    font-size:2.2rem;
+  }
+
+  .profile-edit-btn{
+    order:1;
+    padding:0;
+    text-align: center;
+    margin-top: 1rem;
+  }
+
+  .profile-bio{ 
+    font-size: 1.4rem;
+    margin-top: 1.5rem;
+  }
+
+  .profile-edit-btn,
+  .profile-bio,
+  .profile-stats{
+    flex-basis: 100%;
+  }
+
+  .profile-stats{
+    order:1;
+    margin-top: 1.5rem;
+  }
+
+  .profile-stats ul{
+    display: flex;
+    text-align: center;
+    padding: 1.2rem 0;
+    border-top: 0.1rem solid #dadada;
+    border-bottom: 0.1rem solid #dadada;
+  }
+
+  .profile-stats li{
+    font-size: 1.4rem;
+    flex: 1;
+    margin: 0;
+  }
+
+  .profile-stat-count{
+    display: block;
+  }
 
 
+}
+/*  */
+  
+@keyframes loader{
+  to{
+    transform: rotate(360deg);
+  }
+}
 
 /*  */
 
@@ -224,6 +308,39 @@ border-radius: 50%;
   .gallery{
     width: auto;
     margin:0;
+  }
+
+  @media (max-width:40rem){
+    .profile {
+      grid-template-columns: auto 1fr;
+      grid-row-gap: 1.5rem;
+    }
+
+    .profile-image{
+      grid-row: 1 / 2;
+    }
+
+    .profile-user-settings{
+      display:grid;
+      grid-template-columns: auto 1fr;
+      grid-gap: 1rem;
+    }
+
+    .profile-edit-btn,
+    .profile-bio,
+    .profile-stats{
+      grid-column: 1 / -1;
+    }
+
+    .profile-user-settings,
+    .profile-edit-btn,
+    .profile-settings-btn,
+    .profile-bio,
+    .profile-stats{
+      margin: 0;
+    }
+
+
   }
 
 }
