--- a/gram/templates/comments.html
+++ b/gram/templates/comments.html
@@ -18,5 +18,32 @@
     {% endblock %}
 </head>
 <body>
-   
+   <main>
+        <div class="container">
+            <section class="glass">
+                <div class="dashboard">
+                    <div class="games">
+                        <div class="status">
+                            <h1>Active Games</h1>
+                            <input type="text" />
+                        </div>
+                        <div class="cards">
+                            <div class="card">
+        
+                                <img src="{% static 'images/Screenshot from 2021-02-22 05-00-53.png' %}" alt="" />
+                                <div class="card-info">
+                                  <h2>Assassins Creed Valhalla</h2>
+                                  <p>PS5 Version</p>
+                                  <div class="progress"></div>
+                                </div>
+                                <h2 class="percentage">60%</h2>
+                              </div>
+        
+                        </div>
+                    </div>
+                </div>
+               </section>
+
+        </div>
+   </main>
 </body>
