Requirements Txt Created

--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -31,7 +31,7 @@
       {% endblock %}
     </head>
     <body>
-      {% include "navbar.html" %} {% include "instagram-nav.html" %}
+     {% include "instagram-nav.html" %}
       <h1 class="text-center">coews everywhre</h1>
 
       <h3>Hunger</h3>
