Migration installed and Initialized

--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -31,10 +31,10 @@
       {% endblock %}
     </head>
     <body>
-     {% include "instagram-nav.html" %}
-      <h1 class="text-center">coews everywhre</h1>
-
-      <h3>Hunger</h3>
+      {% include "navbar.html" %}
+      <br>
+      {% include "instagram-nav.html" %}
+      
       {% block scripts %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       {% bootstrap_javascript %} {% endblock %}
