--- a/gram/templates/home.html
+++ b/gram/templates/home.html
@@ -15,11 +15,16 @@
       src="https://kit.fontawesome.com/d3d6f2df1f.js"
       crossorigin="anonymous"
     ></script>
+    
+    
+    
     <link rel="stylesheet" href="{% static 'css/instagram-nav.css' %}" />
     <title>Document</title>
   </head>
   <body>
-       <div class="mt-4">
+    
+    {% block content %}
+    <div class="mt-4">
         <div class="container d-flex justify-content-center">
             <div class="col-9">
                 <div class="row">
@@ -34,7 +39,7 @@
                                             <div class="d-flex flex-column align-items-center">
                                                 <div
                                                     class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center border border-danger story-profile-photo">
-                                                    <img src="assets/images/profiles/profile-1.jpg" alt="..."
+                                                    <img src="{% static '/images/pexels-pixabay-355952.jpg' %}" alt="..."
                                                         style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
                                                 </div>
                                                 <small>samkolder</small>
@@ -74,7 +79,7 @@
                                 </div>
                                 <div class="card-body p-0">
                                     <div class="embed-responsive embed-responsive-1by1">
-                                        <img class="embed-responsive-item" src="assets/images/posts/post-1.jpg" />
+                                        <img class="embed-responsive-item" src="{% static '/images/pexels-pixabay-355952.jpg' %}" />
                                     </div>
 
                                     <div class="d-flex flex-row justify-content-between pl-3 pr-3 pt-3 pb-1">
@@ -128,21 +133,21 @@
                                     </div>
 
                                     <div class="pl-3 pr-3 pb-2">
-                                        <strong class="d-block">365.354 likes</strong>
-                                        <strong class="d-block">samkolder</strong>
-                                        <p class="d-block mb-1">Lil drone shot I got a while back but never posted.</p>
+                                        <strong class="d-block">Number Of Likes</strong>
+                                        <strong class="d-block">Username</strong>
+                                        <p class="d-block mb-1">Description</p>
                                         <button class="btn p-0">
-                                            <span class="text-muted">View all 2,247 comments</span>
+                                            <span class="text-muted">View Comments and (The Number)</span>
                                         </button>
 
                                         <div>
                                             <div>
-                                                <strong class="d-block">a.7.m3ff</strong>
-                                                <span>❤️💓💓💓💓💓</span>
+                                                <strong class="d-block">Commentors Name</strong>
+                                                <span>Comment</span>
                                             </div>
                                             <div>
-                                                <strong class="d-block">adri_rez77</strong>
-                                                <span>Hi</span>
+                                                <strong class="d-block">Commentors Name</strong>
+                                                <span>Comment</span>
                                             </div>
                                         </div>
 
@@ -238,5 +243,8 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 </footer>
+    {%endblock%}
+      
+       
   </body>
 </html>
