--- a/gram/templates/instagram-nav.html
+++ b/gram/templates/instagram-nav.html
@@ -94,6 +94,8 @@
         </nav>
     </div>
 
-    {% include "instagram-nav.html" %}
+    {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% bootstrap_javascript %} {% endblock %}
   </body>
 </html>
