Comments Folder Created

--- a/gram/templates/change_password.html
+++ b/gram/templates/change_password.html
@@ -20,28 +20,31 @@
 </head>
 <body>
     <div class="container mt-5">
-        <a href="/profile" class="btn btn-dark my-3">Profile</a>
-        <div class="wrapper">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="product-img">
-                        <img src="{% static '/images/Akan.png' %}" height="420" width="327">
-                      </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="product-info">
-                        <div class="product-text">
-                          <h2>Username</h2>
-                          <p>Caption of Photo</p>
-                          
-                        </div>
-                        <a href="/comments" class="btn btn-dark my-3">Comments</a>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="product-img">
+                    <img src="{% static '/images/Akan.png' %}" height="420" width="327">
+                  </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-info">
+                    <div class="product-text">
+                      <h1>Harvest Vase</h1>
+                      <h2>by studio and friends</h2>
+                      <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
                     </div>
-                </div>
+                    <div class="product-price-btn">
+                      <p><span>78</span>$</p>
+                      <button type="button">buy now</button>
+                    </div>
+                  </div>
             </div>
         </div>
-        
-        
+        <div class="wrapper">
+            
+            
+            
+          </div>
     </div>
     
   
