--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -60,7 +60,8 @@
 
 
           <div class="gallery-item" tabindex="0">
-            <img src="{% static '/images/FITNESS API (1).png' %}" alt="Gallery-1" class="gallery-image">
+            <img src="{% static '/images/FITNESS API (1).png' %}"  alt="Gallery-1" class="gallery-image">
+            <a href="/viewphoto/" class="btn profile-edit-btn">View Photo</a>
             <div class="gallery-item-info">
               <ul>
                 <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden>56</i></li>
