--- a/static/css/change_password.css
+++ b/static/css/change_password.css
@@ -7,7 +7,7 @@ img{
 margin: 0 0 0 38px;
 padding-top: 52px;
 font-size: 34px;
-color: #000000;
+color: #474747;
 }
 
 .product-text h1,
@@ -21,15 +21,15 @@ font-size: 13px;
 font-family: 'Raleway', sans-serif;
 font-weight: 400;
 text-transform: uppercase;
-color: black;
+color: #d2d2d2;
 letter-spacing: 0.2em;
 }
 
 .product-text p {
 height: 125px;
-/* margin: 0 0 0 38px; */
+margin: 0 0 0 38px;
 font-family: 'Playfair Display', serif;
-color: black;
+color: #8d8d8d;
 line-height: 1.7em;
 font-size: 15px;
 font-weight: lighter;
