--- a/gram/templates/comments.html
+++ b/gram/templates/comments.html
@@ -1,49 +1,33 @@
-{% load bootstrap3 %} {% load static%}
+
+{% load bootstrap3 %} {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
-    <script src="https://kit.fontawesome.com/d3d6f2df1f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
-
-    {% block styles %} {% bootstrap_css %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/d3d6f2df1f.js"
+      crossorigin="anonymous"
+    ></script>
+    
+    
+    
     <link rel="stylesheet" href="{% static 'css/comments.css' %}" />
-    {% endblock %}
-</head>
-<body>
-   <main>
-        <div class="container">
-            <section class="glass">
-                <div class="dashboard">
-                    <div class="games">
-                        <div class="status">
-                            <h1>Active Games</h1>
-                            <input type="text" />
-                        </div>
-                        <div class="cards">
-                            <div class="card">
-        
-                                <img src="{% static 'images/Screenshot from 2021-02-22 05-00-53.png' %}" alt="" />
-                                <div class="card-info">
-                                  <h2>Assassins Creed Valhalla</h2>
-                                  <p>PS5 Version</p>
-                                  <div class="progress"></div>
-                                </div>
-                                <h2 class="percentage">60%</h2>
-                              </div>
-        
-                        </div>
-                    </div>
-                </div>
-               </section>
+    <title>Document</title>
+  </head>
+  <body>
+    <h3>cows</h3>
+     
+       
+  </body>
+</html>
 
-        </div>
-   </main>
-</body>
+
