Sign up and Login Html Created

--- a/gram/templates/change_password.html
+++ b/gram/templates/change_password.html
@@ -5,48 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
     <script src="https://kit.fontawesome.com/d3d6f2df1f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="https://kit.fontawesome.com/621136387c.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
     {% block styles %} {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static '/css/change_password.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/signup.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/signupdetails.css' %}" />
     {% endblock %}
 
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="product-img">
-                    <img src="{% static '/images/Akan.png' %}" height="420" width="327">
-                  </div>
+    <main>
+        <div class="log-in-container">
+          <a href="/main" class="btn btn-dark my-3">Home Page</a>
+          <div class="log-in">
+            <!-- Logo -->
+            <img src="https://i.imgur.com/zqpwkLQ.png" class="logo" />
+            <!-- Log in form -->
+            <div class="log-in-form">
+              
+              <input type="text" placeholder="Username" />
+
+              <input type="password" placeholder=" Previous Password" />
+              <input type="password" placeholder="Password" />
+              <input type="text" placeholder="  Confirm-Password" />
+              
+              <button class="log-in-button">Change Password</button>
             </div>
-            <div class="col-md-4">
-                <div class="product-info">
-                    <div class="product-text">
-                      <h1>Harvest Vase</h1>
-                      <h2>by studio and friends</h2>
-                      <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
-                    </div>
-                    <div class="product-price-btn">
-                      <p><span>78</span>$</p>
-                      <button type="button">buy now</button>
-                    </div>
-                  </div>
-            </div>
-        </div>
-        <div class="wrapper">
-            
-            
             
           </div>
-    </div>
-    
-  
-  </body>
+          <!-- Sign up -->
+          <div class="sign-up">
+            <span>Already Have an Account</span><a href="/login_user">Login User</a>
+          </div>
+          <!-- Download app -->
+          
+        </div>
+        <!-- Phones -->
+        
+      </main>
+      
+ 
+</body>
 </html>
