--- a/gram/templates/login.html
+++ b/gram/templates/login.html
@@ -22,6 +22,7 @@
   <body>
     <main>
       <div class="log-in-container">
+        <a href="/main" class="btn btn-dark my-3">Home Page</a>
         <div class="log-in">
           <!-- Logo -->
           <img src="https://i.imgur.com/zqpwkLQ.png" class="logo" />
@@ -41,11 +42,11 @@
             </a>
           </div>
           <!-- Forgot password? -->
-          <a href="#">Forgot password?</a>
+          <a href="/change_password">Forgot password?</a>
         </div>
         <!-- Sign up -->
         <div class="sign-up">
-          <span>Don't have an account?</span><a href="#">Sign up</a>
+          <span>Don't have an account?</span><a href="/sign_up">Sign up</a>
         </div>
         <!-- Download app -->
         
