--- a/gram/templates/signup.html
+++ b/gram/templates/signup.html
@@ -24,6 +24,7 @@
 <body>
     <main>
         <div class="log-in-container">
+          <a href="/main" class="btn btn-dark my-3">Home Page</a>
           <div class="log-in">
             <!-- Logo -->
             <img src="https://i.imgur.com/zqpwkLQ.png" class="logo" />
@@ -37,14 +38,11 @@
               <button class="log-in-button">Sign Up</button>
             </div>
             <!-- OR divider -->
-            <span class="or-divider">OR</span>
-            <!-- Log in with Facebook -->
-            <!-- Forgot password? -->
-            <a href="#">Forgot password?</a>
+            
           </div>
           <!-- Sign up -->
           <div class="sign-up">
-            <span>Already Have an Account</span><a href="#">Login User</a>
+            <span>Already Have an Account</span><a href="/login_user">Login User</a>
           </div>
           <!-- Download app -->
           
