--- a/gram/templates/comments.html
+++ b/gram/templates/comments.html
@@ -1,33 +1,62 @@
-
-{% load bootstrap3 %} {% load static %}
-
+{% load bootstrap3 %} {% load static%}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/d3d6f2df1f.js"
-      crossorigin="anonymous"
-    ></script>
-    
-    
-    
-    <link rel="stylesheet" href="{% static 'css/comments.css' %}" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <body>
-    <h3>cows</h3>
-     
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/d3d6f2df1f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
+
+    {% block styles %} {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static '/css/comments.css' %}" />
+    {% endblock %}
+</head>
+<body>
+   
+    <div class="container" >
+        <a href="/profile" class="btn btn-dark my-3">Back</a>
+        
+
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button  class="btn btn-primary" type="button" id="button-addon2">Button</button>
+        </div>
+        
+        <div class="list-group mb-2">
+            
+            <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+            <div class="d-flex w-200 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small>3 days ago</small>
+            </div>
+            <p class="mb-1">Some placasdfadsfasdfeholder content in a paragraph.jajsjkbsdafsdafsadjfbadsbjlfbsadfn adsbfasdhfhdas;fsad;fhasd;fh</p>
+            <small>And some small print.</small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small class="text-muted">3 days ago</small>
+            </div>
+            <p class="mb-1">Some placeholder content in a paragraph.</p>
+            <small class="text-muted">And some muted small print.</small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small class="text-muted">3 days ago</small>
+            </div>
+            <p class="mb-1">Some placeholder content in a paragraph.</p>
+            <small class="text-muted">And some muted small print.</small>
+            </a>
+        </div>
+    </div>
        
-  </body>
-</html>
-
-
+        
+   
+</body>
