--- a/gram/templates/instagram-nav.html
+++ b/gram/templates/instagram-nav.html
@@ -60,22 +60,12 @@
                             </li>
                             <li class="list-inline-item ml-2">
                                 <a href="#" class="link-menu">
-                                    <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-compass"
-                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M8 15.016a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13zm0 1a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z" />
-                                        <path
-                                            d="M6 1a1 1 0 0 1 1-1h2a1 1 0 0 1 0 2H7a1 1 0 0 1-1-1zm.94 6.44l4.95-2.83-2.83 4.95-4.95 2.83 2.83-4.95z" />
-                                    </svg>
+                                    Upload Image
                                 </a>
                             </li>
                             <li class="list-inline-item ml-2">
-                                <a href="#" class="link-menu">
-                                    <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-heart"
-                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-                                    </svg>
+                                <a href="/login_user" class="link-menu">
+                                    Login 
                                 </a>
                             </li>
                             <li class="list-inline-item ml-2 align-middle">
@@ -85,6 +75,11 @@
                                         <img src="assets/images/profiles/profile-6.jpg" alt="..."
                                             style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
                                     </div>
+                                </a>
+                            </li>
+                            <li class="list-inline-item ml-2 align-middle">
+                                <a href="" class="link-menu">
+                                    Logout
                                 </a>
                             </li>
                         </ul>
