--- a/gram/templates/main.html
+++ b/gram/templates/main.html
@@ -83,7 +83,7 @@
                                             <img src="assets/images/profiles/profile-1.jpg" alt="..."
                                                 style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
                                         </div>
-                                        <span class="font-weight-bold">samkolder</span>
+                                        <span class="font-weight-bold">Username</span>
                                     </div>
                                 </div>
                                 <div class="card-body p-0">
