Models.py Starting Form

--- a/gram/templates/comments.html
+++ b/gram/templates/comments.html
@@ -20,7 +20,7 @@
 <body>
    
     <div class="container" >
-        <a href="/profile" class="btn btn-dark my-3">Back</a>
+        <a href="{% url 'main' %}" class="btn btn-dark my-3">Home Page</a>
         
 
         <div class="input-group mb-3">
