--- a/gram/templates/main.html
+++ b/gram/templates/main.html
@@ -148,19 +148,12 @@
                                         <button class="btn p-0">
                                             <span class="text-muted">View Comments and (The Number)</span>
                                         </button>
-
                                         <div>
-                                            <div>
-                                                <strong class="d-block">Commentors Name</strong>
-                                                <span>Comment</span>
-                                            </div>
-                                            <div>
-                                                <strong class="d-block">Commentors Name</strong>
-                                                <span>Comment</span>
-                                            </div>
+                                            <a href="{% url 'comments' %}" class="btn btn-dark my-3"> View Comments</a>
                                         </div>
-
-                                        <small class="text-muted">4 HOURS AGO</small>
+                                        <div>
+                                            <small class="text-muted">4 HOURS AGO</small> 
+                                        </div>
                                     </div>
 
                                     <div class="position-relative comment-box">
