--- a/static/css/viewphoto.css
+++ b/static/css/viewphoto.css
@@ -1,86 +1,117 @@
 img{
-    width: 50%;
-    height: 50%;
-}
-.product-text h1 {
-margin: 0 0 0 38px;
-padding-top: 52px;
-font-size: 34px;
-color: #000000;
+    height: 100%;
+    width: 100%;
+
 }
 
-.product-text h1,
-.product-price-btn p {
-font-family: 'Bentham', serif;
+
+body{
+    margin:0;
+    padding:0;
+    background:#f2f2f2;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: sans-serif;
+}
+.container {
+    width: 900px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    background:#fff;
+    margin:20px;
 }
 
-.product-text h2 {
-margin: 0 0 47px 38px;
-font-size: 13px;
-font-family: 'Raleway', sans-serif;
-font-weight: 400;
-text-transform: uppercase;
-color: black;
-letter-spacing: 0.2em;
+.container .img-box{
+    width:100%;
+    height:100%;
+    background:#ccc;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    position: relative;
+}
+.container .img-box img{
+    width:900px;
+    transform:rotate(100deg);
 }
 
-.product-text p {
-height: 125px;
-/* margin: 0 0 0 38px; */
-font-family: 'Playfair Display', serif;
-color: black;
-line-height: 1.7em;
-font-size: 15px;
-font-weight: lighter;
-overflow: hidden;
+.container .text-box{
+    width:50%;
+    padding: 20px 30px;
+    box-sizing: border-box;
+}
+.container .text-box h1{
+    font-size:3em;
+    color:#444;
+    line-height: 1.5em;
+}
+.container .text-box h1 span{
+    font-size:8em;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color:#666;
+    font-weight: 100;
+}
+.container .text-box p{
+    font-size: 1em;
+    line-height: 1.5em;
+    color:#555;
+}
+.container .text-box h2{
+    font-size: 3em;
+    font-weight: 600;
+    color:#962b47;
+    float: left;
+}
+.container .text-box button{
+    border:none;
+    outline:none;
+    cursor:pointer;
+    background:#65017b;
+    padding:15px 20px;
+    text-transform: uppercase;
+    font-size:1.5em;
+    font-weight: 300;
+    float: right;
+    border-radius:30px;
+    color:#fff;
+    margin: 35px;
 }
 
-.product-price-btn {
-height: 103px;
-width: 327px;
-margin-top: 17px;
-position: relative;
-}
+@media(max-width:1080px){
+    .container{
+        height:auto;
+    }
+    .container .img-box{
+        width: 100%;
+    }
+    .container .img-box img{
+        width: 100%;
+        transform:rotate(0deg);
+        padding: 40px;
+        box-sizing: border-box;
+    }
+    .container .text-box{
+        width:100%;
+    }
+    .container .text-box h1{
+        font-size:2em;
+        line-height: 0.8rem;
+    }
+    .container .text-box h2{
+        font-size:2em;
+        font-weight: 300;
+    }
+    .container .text-box button{
+        padding: 10px 15px;
+        font-size: 1em;
+        margin-top: 30px;
+    }
 
-.product-price-btn p {
-display: inline-block;
-position: absolute;
-top: -13px;
-height: 50px;
-font-family: 'Trocchi', serif;
-margin: 0 0 0 38px;
-font-size: 28px;
-font-weight: lighter;
-color: #474747;
-}
 
-span {
-display: inline-block;
-height: 50px;
-font-family: 'Suranna', serif;
-font-size: 34px;
-}
-
-.product-price-btn button {
-/* float:right; */
-display: inline-block;
-height: 50px;
-width: 176px;
-margin: 0 40px 0 16px;
-box-sizing: border-box;
-border: transparent;
-border-radius: 60px;
-font-family: 'Raleway', sans-serif;
-font-size: 14px;
-font-weight: 500;
-text-transform: uppercase;
-letter-spacing: 0.2em;
-color: #ffffff;
-background-color: #9cebd5;
-cursor: pointer;
-outline: none;
-}
-
-.product-price-btn button:hover {
-background-color: #79b0a1;
-}
+} 
