--- a/gram/templates/instagram-nav.html
+++ b/gram/templates/instagram-nav.html
@@ -64,12 +64,12 @@
                                 </a>
                             </li>
                             <li class="list-inline-item ml-2">
-                                <a href="/login_user" class="link-menu">
+                                <a href="{% url 'login_user' %}" class="link-menu">
                                     Login 
                                 </a>
                             </li>
                             <li class="list-inline-item ml-2 align-middle">
-                                <a href="/profile" class="link-menu">
+                                <a href="{% url 'profile' %}" class="link-menu">
                                     <div
                                         class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center border topbar-profile-photo">
                                         <img src="assets/images/profiles/profile-6.jpg" alt="..."
