Login and Regidtration Files Created

--- a/gram/templates/registration/signup.html
+++ b/gram/templates/registration/signup.html
@@ -42,7 +42,7 @@
           </div>
           <!-- Sign up -->
           <div class="sign-up">
-            <span>Already Have an Account</span><a href="{% url 'login_user' %}">Login User</a>
+            <span>Already Have an Account</span><a href="{% url 'login' %}">Login User</a>
           </div>
           <!-- Download app -->
           
