--- a/gram/templates/instagram-nav.html
+++ b/gram/templates/instagram-nav.html
@@ -36,52 +36,45 @@
                     </div>
                     <div class="d-flex flex-row">
                         <ul class="list-inline m-0">
-                            <li class="list-inline-item">
-                                <a href="#" class="link-menu">
-                                    <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-house-door-fill"
-                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z" />
-                                        <path fill-rule="evenodd"
-                                            d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="list-inline-item ml-2">
-                                <a href="#" class="link-menu">
-                                    <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-inboxes"
-                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M.125 11.17A.5.5 0 0 1 .5 11H6a.5.5 0 0 1 .5.5 1.5 1.5 0 0 0 3 0 .5.5 0 0 1 .5-.5h5.5a.5.5 0 0 1 .496.562l-.39 3.124A1.5 1.5 0 0 1 14.117 16H1.883a1.5 1.5 0 0 1-1.489-1.314l-.39-3.124a.5.5 0 0 1 .121-.393zm.941.83l.32 2.562a.5.5 0 0 0 .497.438h12.234a.5.5 0 0 0 .496-.438l.32-2.562H10.45a2.5 2.5 0 0 1-4.9 0H1.066zM3.81.563A1.5 1.5 0 0 1 4.98 0h6.04a1.5 1.5 0 0 1 1.17.563l3.7 4.625a.5.5 0 0 1-.78.624l-3.7-4.624A.5.5 0 0 0 11.02 1H4.98a.5.5 0 0 0-.39.188L.89 5.812a.5.5 0 1 1-.78-.624L3.81.563z" />
-                                        <path fill-rule="evenodd"
-                                            d="M.125 5.17A.5.5 0 0 1 .5 5H6a.5.5 0 0 1 .5.5 1.5 1.5 0 0 0 3 0A.5.5 0 0 1 10 5h5.5a.5.5 0 0 1 .496.562l-.39 3.124A1.5 1.5 0 0 1 14.117 10H1.883A1.5 1.5 0 0 1 .394 8.686l-.39-3.124a.5.5 0 0 1 .121-.393zm.941.83l.32 2.562A.5.5 0 0 0 1.884 9h12.234a.5.5 0 0 0 .496-.438L14.933 6H10.45a2.5 2.5 0 0 1-4.9 0H1.066z" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="list-inline-item ml-2">
-                                <a href="#" class="link-menu">
-                                    Upload Image
-                                </a>
-                            </li>
-                            <li class="list-inline-item ml-2">
-                                <a href="{% url 'login_user' %}" class="link-menu">
-                                    Login 
-                                </a>
-                            </li>
-                            <li class="list-inline-item ml-2 align-middle">
-                                <a href="{% url 'profile' %}" class="link-menu">
-                                    <div
-                                        class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center border topbar-profile-photo">
-                                        <img src="assets/images/profiles/profile-6.jpg" alt="..."
-                                            style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="list-inline-item ml-2 align-middle">
-                                <a href="" class="link-menu">
-                                    Logout
-                                </a>
-                            </li>
+                            {% if user.is_authenticated %}
+                                <li class="list-inline-item ml-2">
+                                    <a href="#" class="link-menu">
+                                        Create Post
+                                    </a>
+                                </li>
+                                <li class="list-inline-item ml-2 align-middle">
+                                    <a href="{% url 'profile' %}" class="link-menu">
+                                        <div
+                                            class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center border topbar-profile-photo">
+                                            <img src="assets/images/profiles/profile-6.jpg" alt="..."
+                                                style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item ml-2 align-middle">
+                                    <a href="" class="link-menu">
+                                        Logout
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="list-inline-item ml-2">
+                                    <a href="{% url 'sign_up' %}" class="link-menu">
+                                        Sign Up 
+                                    </a>
+                                </li>
+                                <li class="list-inline-item ml-2">
+                                    <a href="{% url 'login' %}" class="link-menu">
+                                        Login 
+                                    </a>
+                                </li>
+                                {% endif %}
+
+
+                            
+                            
+                            
+                            
+                            
                         </ul>
                     </div>
                 </div>
