--- a/gram/templates/create_post.html
+++ b/gram/templates/create_post.html
@@ -1,1 +1,97 @@
+{% load bootstrap3 %} {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% if title %}
+    <title>Create Post {{title}}</title>
+    {% else %}
+    <title>Create Post</title>
+    {% endif %} {% block styles %} {% bootstrap_css %}
+    <link rel="stylesheet" href="{%static  '/css/create_post.css' %}" />
+    {% endblock %}
+  </head>
+    <body class="m-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <div class="card-body">
+              <a href="{% url 'main' %}" class="btn btn-dark my-3">Home Page</a>
+            </div>
+
+            <div class="card">
+              <form method="POST" action="." enctype="multipart/form-data" >
+                {% csrf_token %}
+                
+                <!-- {{ form.as_p }} -->
+                
+                
+
+                <div class="form-group m-3">
+                  <label>Name</label>
+                  <input
+                    required
+                    name="Name"
+                    type="text"
+                    placeholder="Name of Photo"
+                    class="form-control"
+                  />
+                </div>
+
+                <div class="form-group m-3">
+                  <label>Caption</label>
+                  <input
+                    required
+                    name="new_caption"
+                    type="text"
+                    placeholder="Caption This Post"
+                    class="form-control"
+                  />
+                </div>
+
+
+                <!-- <div class="form-group m-3">
+                  <label>Choose a Profile</label>
+                  <select name="category" class="form-control">
+                    <option value="none">Choose a Profile</option>
+
+                    {% for users in profile %}
+                    <option value="{{ user.profile.id }}">
+                      {{ profile.name }}
+                    </option>
+                    {% endfor %}
+                  </select>
+                </div> -->
+
+                <div class="form-group m-3">
+                  <label>Upload image</label>
+                  <input
+                    required
+                    name="photos"
+                    type="file"
+                    multiple
+                    class="form-control-file"
+                  />
+                </div>
+
+
+                <button type="submit" class="btn btn-primary m-3">
+                  Submit
+                </button>
+              </form>
+              <hr>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% bootstrap_javascript %} {% endblock %}
+  </body>
+</html>
 
