Debugging the front End

--- a/gram/templates/main.html
+++ b/gram/templates/main.html
@@ -52,7 +52,7 @@
                                                     <img src="{{image.profile.profile_pic.url}}" alt="..."
                                                         style="transform: scale(1.5); width: 100%; position: absolute; left: 0;">
                                                 </div>
-                                                <small class="text-capitalize">{{image.profile.user}}</small>
+                                                <small class="text-capitalize">{{image.profile.name}}</small>
                                             </div>
                                         </button>
                                     </li> 
