--- a/gram/templates/create_post.html
+++ b/gram/templates/create_post.html
@@ -1,4 +1,4 @@
- {% load static %}
+ {% load bootstrap3 %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,64 +23,15 @@
             </div>
 
             <div class="card">
-              <form method="POST" action="." enctype="multipart/form-data" >
+              <form method="POST" action="{% url 'create_post' %}" enctype="multipart/form-data" >
                 {% csrf_token %}
                 
-                <!-- {{ form.as_p }} -->
+                {% bootstrap_form form%}
                 
-                <div class="form-group m-3 text-center">
-                  CREATE A POST!!! 
-                </div>
-
-                <div class="form-group m-3">
-                  <label>Name</label>
-                  <input
-                    required
-                    name="Name"
-                    type="text"
-                    placeholder="Name of Photo"
-                    class="form-control"
-                  />
-                </div>
-
-                <div class="form-group m-3">
-                  <label>Caption</label>
-                  <input
-                    required
-                    name="new_caption"
-                    type="text"
-                    placeholder="Caption This Post"
-                    class="form-control"
-                  />
-                </div>
+                
 
 
-                <!-- <div class="form-group m-3">
-                  <label>Choose a Profile</label>
-                  <select name="category" class="form-control">
-                    <option value="none">Choose a Profile</option>
-
-                    {% for users in profile %}
-                    <option value="{{ user.profile.id }}">
-                      {{ profile.name }}
-                    </option>
-                    {% endfor %}
-                  </select>
-                </div> -->
-
-                <div class="form-group m-3">
-                  <label>Upload image</label>
-                  <input
-                    required
-                    name="photos"
-                    type="file"
-                    multiple
-                    class="form-control-file"
-                  />
-                </div>
-
-
-                <button type="submit" class="btn btn-primary m-3">
+                <button type="submit" class="btn btn-primary m-3" value="Post">
                   Submit
                 </button>
               </form>
